<resources>
	    <string name="app_name">OOHLALA</string>
	    <string name="applicationId">119061101466788</string>
	    <string name="apikey">0VxiO0MBXatC_00TEuFXEAcRAM6mHydduvMsfFg</string>
	    <string name="Social">Social</string>
		<string name="EVENTS">EVENTS</string>
	    <string name="Games">Games</string>
	    <string name="Rewards">Rewards</string>
	    <string name="Stay_on_Oohlala">Stay on Oohlala</string>
	    <string name="Rate_Us">Rate Us</string>
	    <string name="Exit_Oohlala">Exit Oohlala</string>
		<string name="Map_service_not_available">Map service not available</string>
		<string name="You_just_took_the_price_successfully">You just took the prize successfully!</string>
		<string name="The_game_is_over">The game has ended! The winner will be notified and announced shortly.</string>
		<string name="You_are_not_within_the_required_distance_to_take_the_prize">You are not within the required distance to take the prize.</string>
		<string name="You_are_outside_of_the_game_boundary_area_You_can_not_take_the_prize_now">You are outside of the game boundary area. You can not take the prize now.</string>
		<string name="Your_prize_just_got_stolen">Your prize just got stolen.</string>
		<string name="You_are_banned_for_the_game">You are banned for the game.</string>
		<string name="Game_ends_in_">Game ends in&#160;</string>
		<string name="_days_">&#160;days&#160;</string>
		<string name="You_are_holding_the_price_now_run">You are holding the prize now, run!</string>
		<string name="Your_price_just_got_stolen_Your_timeout_has_">Your prize just got stolen! Timeout:&#160;</string>
		<string name="_s_left">&#160;s left</string>
		<string name="The_price_is_only_">The prize is only&#160;</string>
		<string name="_m_away_click_the_button_to_take_it">&#160;m away, click the button to take it!</string>
		<string name="_km_away_click_the_button_to_take_it">&#160;km away, click the button to take it!</string>
		<string name="The_price_is_">The prize is&#160;</string>
		<string name="_m_away_be_within_">&#160;m away, be within&#160;</string>
		<string name="_km_away_be_within_">&#160;km away, be within&#160;</string>
		<string name="_m_to_take_it">&#160;m to take it!</string>
		<string name="Gps_disabled_please_turn_it_on_to_see_nearby_students">Gps disabled, please turn it on to see nearby students</string>
		<string name="Gps_disabled_please_turn_it_on_to_play_the_game">Gps disabled, please turn it on to play the game</string>
		<string name="_students_to_unlock">&#160;students to unlock</string>
		<string name="Campus_wall_will_be_unlocked_when_more_than_25_students_registered_in_this_campus_please_click_the_invite_button_to_invite_your_friends_to_join">Campus wall will be unlocked when more than 25 students registered in this campus, please click the invite button to invite your friends to join.</string>
		<string name="like">like</string>
		<string name="liked">liked</string>
		<string name="Delete_Thread">Delete Thread</string>
		<string name="Warning_This_cannot_be_undone">Warning: This cannot be undone</string>
		<string name="No">No</string>
		<string name="Yes">Yes</string>
		<string name="The_thread_is_deleted">The thread is deleted</string>
		<string name="Delete_Comment">Delete Comment</string>
		<string name="The_comment_is_deleted">The comment is deleted</string>
		<string name="Select_Picture">Select Picture</string>
		<string name="Crop_Picture">Crop Picture</string>
		<string name="Facebook">Facebook</string>
		<string name="Contact_List">Contact List</string>
		<string name="Invite_">Invite&#160;</string>
		<string name="_by">&#160;by</string>
		<string name="Invite_has_been_sent_through_email">Invite has been sent through email</string>
		<string name="The_invitee_is_already_a_friend_of_you">The invitee is already a friend of you</string>
		<string name="There_is_already_an_in_app_friend_invite_pending_between_you_and_the_invitee">There is already an in-app friend invite pending between you and the invitee</string>
		<string name="An_external_friend_invitation_has_already_been_sent_to_the_invitee">An external friend invitation has already been sent to the invitee</string>
		<string name="Choose_a_SMS_client">Choose a SMS client:</string>
		<string name="No_Contact_Data">No Contact Data</string>
		<string name="No_contact_data_for_this_person">No contact data for this person</string>
		<string name="Facebook_invite_request_sent_to_">Facebook invite request sent to&#160;</string>
		<string name="Facebook_invite_request_cancelled">Facebook invite request cancelled</string>
		<string name="Campus">Campus</string>
		<string name="Directions_to_">Directions to:&#160;</string>
		<string name="Store_open_time_not_available">Store open time not available</string>
		<string name="Send_email_via">Choose an email client:</string>
		<string name="Monday_">Monday&#160;</string>
		<string name="Tuesday_">Tuesday&#160;</string>
		<string name="Wednesday_">Wednesday&#160;</string>
		<string name="Thursday_">Thursday&#160;</string>
		<string name="Friday_">Friday&#160;</string>
		<string name="Saturday_">Saturday&#160;</string>
		<string name="Sunday_">Sunday&#160;</string>
		<string name="Share_on_Facebook">Share on Facebook</string>
		<string name="Share_by_SMS">Share by SMS</string>
		<string name="Share_by_Email">Share by E-mail</string>
		<string name="Cancel">Cancel</string>
		<string name="Share">Share</string>
		<string name="ShareFacebookCaption">This and other exclusive promotions only on Oohlala!</string>
		<string name="just_discovered_">just discovered&#160;</string>
		<string name="_at_">&#160;at&#160;</string>
		<string name="ShareFacebookLink">http://www.gotoohlala.com</string>
		<string name="ShareFacebookName">Oohlala Mobile</string>
		<string name="Join_us_in_Oohlala">Join us in Oohlala</string>
		<string name="Report_Problem">Report Problem</string>
		<string name="You_can_not_send_a_blank_report">You can not send a blank report</string>
		<string name="Invalid_School_Email">Invalid School Email</string>
		<string name="Invalid_Email_Address_Format">Invalid Email Address Format</string>
		<string name="No_School_Email_Found">No School Email Found</string>
		<string name="School_Not_Found">School Not Found</string>
		<string name="is_not_a_school_email_we_currently_support_would_you_like_to_use_OOHLALA_at_your_school">&#160;is not a school email we currently support, would you like to use OOHLALA at your school?</string>
		<string name="No_internet_connection_please_try_again">No internet connection, please try again</string>
		<string name="Login_failed">Login failed</string>
		<string name="Logging_out">Logging out</string>
		<string name="You_have_logged_out_from_Facebook">You have logged out from Facebook</string>
		<string name="Action_Canceled">Action Canceled</string>
		<string name="School_name_must_be_at_least_4_characters_long">School name must be at least 4 characters long</string>
		<string name="is_not_a_school_we_currently_support_we_have_added_you_to_the_waitlist_and_we_will_let_you_know_when_we_bring_OOHLALA_to_your_school">&#160;is not a school we currently support, we have added you to the waitlist and we will let you know when we bring OOHLALA to your school</string>
		<string name="Passwords_need_to_be_at_least_6_characters_long">Passwords need to be at least 6 characters long</string>
		<string name="Firstname_need_to_be_no_more_than_60_characters_long">Firstname need to be no more than 60 characters long</string>
		<string name="Lastname_need_to_be_no_more_than_60_characters_long">Lastname need to be no more than 60 characters long</string>
		<string name="Invalid_Birthday_Date_Format">Invalid Birthday Date Format</string>
		<string name="Registration_failed_Input_field_contains_invalid_data">Registration failed: Input field contains invalid data</string>
		<string name="Registration_failed_The_email_has_been_used_in_another_account">Registration failed: The email has been used in another account</string>
		<string name="Registration_failed_One_of_the_Facebook_Connect_fields_contain_invalid_data">Registration failed: One of the Facebook Connect fields contain invalid data</string>
		<string name="Registration_failed_Facebook_account_already_has_an_account_on_OOHLALA">Registration failed: Facebook account already has an account on OOHLALA</string>
		<string name="Registration_failed_Problem_with_the_encoding_of_avatar">Registration failed: Problem with the encoding of avatar</string>
		<string name="Incomplete_Field">Incomplete Field</string>
		<string name="Registration_Successful">Registration Successful</string>
		<string name="Check_your_email_to_verify_your_account">Check your email to verify your account</string>
		<string name="OK">OK</string>
		<string name="Goto_Inbox">Goto Inbox</string>
		<string name="Registration_through_Facebook_is_successful">Registration through Facebook is successful</string>
		<string name="Gps_disabled_please_turn_it_on">Gps disabled, please turn it on</string>
		<string name="Unblock_User">Unblock User</string>
		<string name="Unblock_this_user">Unblock this user?</string>
		<string name="Log_out_of_Oohlala">Log out of Oohlala</string>
		<string name="Log_out_of_your_account">Log out of your account?</string>
		<string name="Single">Single</string>
		<string name="In_a_relationship">In a relationship</string>
		<string name="Complicated">Complicated</string>
		<string name="Available">Available</string>
		<string name="Relationship_Status">Relationship\nStatus</string>
		<string name="Current_Location">Current Location</string>
		<string name="Redeem_Reward">Redeem Reward</string>
		<string name="Enter_Passcode">Enter Passcode</string>
		<string name="Passcode_need_to_be_4_digits">Passcode need to be 4 digits</string>
		<string name="You_just_added_a_star">You just added a star</string>
		<string name="Passcode_is_incorrect">Passcode is incorrect</string>
		<string name="You_already_has_all_stars_on_the_card">You already has all stars on the card</string>
		<string name="You_tried_to_redeem_the_card_reward_without_having_enough_points">You tried to redeem the card reward without having enough points</string>
		<string name="Minimum_time_between_repeated_usages_has_not_passed">Minimum time between repeated usages has not passed</string>
		<string name="Card_Code">Card Code</string>
		<string name="Ongoing">Ongoing</string>
		<string name="_days_remaining">&#160;days remaining</string>
		<string name="_stamped">&#160;stamped</string>
		<string name="Block_User">Block User</string>
		<string name="Block_List">Block List</string>
		<string name="Settings">SETTINGS</string>
		<string name="Email">Email</string>
		<string name="Password">Password</string>
		<string name="Modify_Profile">Modify Profile</string>
		<string name="Change_Password">Change Password</string>
		<string name="Write_a_review">Write a review</string>
		<string name="Send_Feedback">Send Feedback</string>
		<string name="Logout">Logout</string>
		<string name="Sign_Up">SIGN UP</string>
		<string name="First_Name">First Name</string>
		<string name="Last_Name">Last Name</string>
		<string name="Birthday">Birthday</string>
		<string name="Gender">Gender</string>
		<string name="loading">Loading</string>
		<string name="Rules">Rules</string>
		<string name="SCHEDULE">SCHEDULE</string>
		<string name="Done">Done</string>
		<string name="Or_fill_in_your_information_below">Or fill in your information below</string>
		<string name="Sun">Sun</string>
		<string name="Mon">Mon</string>
		<string name="Tue">Tue</string>
		<string name="Wed">Wed</string>
		<string name="Thu">Thu</string>
		<string name="Fri">Fri</string>
		<string name="Sat">Sat</string>
		<string name="Today">Today</string>
		<string name="Social_Schedule">Social Schedule</string>
		<string name="socialtour1">Build your schedule, set reminders \nand share with friends</string>
</resources>